# tito.ai

./: .gitignore
agents/demo/: runner.py
agents/demo/app/Core/Config/: bot.py
agents/demo/app/Core/Parsers/: bot_config_parser.py
agents/demo/app/Http/DTOs/: schemas.py
agents/demo/app/Http/Routes/: assistants.py
agents/demo/app/Services/: assistant_store.py  runner_service.py
agents/demo/resources/data/assistants/: action-bot-tools.json  agent-asterisk.json  agent-context-pro.json  agent-native-gemini.json  agent-native-openai.json  agent-native-ultravox.json  agent-telephony-pro.json  demo-assistant.json  (+9 more)
agents/demo/runners/: asterisk.py
agents/help-desk/: pyproject.toml
agents/help-desk/src/: main.py  runner.py  utils.py
agents/help-desk/src/bots/: help_desk_bot_itm.py
backend/: .env.example  cli.py  main.py  pyproject.toml
backend/app/: dependencies.py
backend/app/Core/Config/: bot.py  server.py
backend/app/Core/Exceptions/: handlers.py
backend/app/Core/Parsers/: bot_config_parser.py
backend/app/Http/DTOs/: campaign_schemas.py  schemas.py
backend/app/Http/Routes/: assistants.py  calls.py  campaigns.py
backend/app/Infrastructure/Call/: daily_room_provider.py  local_bot_process_manager.py
backend/app/Infrastructure/Repositories/: file_assistant_repository.py  file_campaign_repository.py  file_prompt_repository.py  json_crm_repository.py
backend/app/Services/: webhook_sender.py
backend/app/Utils/: audio.py
backend/resources/data/assistants/: 087f8d4c-7526-4dfe-8db5-bb4c4f33e81f.json  22f0a80a-f618-4d74-acf5-79b5b6ff7275.json  2f6bb841-62e7-4f1a-acd9-024a5d336224.json  4a8c4cce-7889-4ca4-8acd-0418dfc4c169.json  56768b6c-97ca-4882-a1c0-7055de97957e.json  5cb0f425-3b31-4df4-9585-0e8aa5562de5.json  8d3e0a25-5c87-4400-8aa5-27978c1d2277.json  9596ce2a-b6c5-499f-8a1b-d3458434fd9f.json  9892579f-916c-4682-8537-a16ebd6d399a.json  9934fa84-2563-43ab-a3e6-83cb4372a25e.json  9b917157-a1a2-45d9-a45d-5854d4ecd929.json  a619890e-a8df-47d1-a406-1e2469639ba4.json  ad417b2a-afa6-4499-8968-1343b427669f.json  ae2f0f37-3f1c-486f-8e3a-e235ad92a5b1.json  d4a70c13-8c26-4e94-a8cb-2b8c0787354f.json  e16aae3a-b0e7-4d2b-9713-5b7d69287c67.json  eddb9cb6-0bc9-45e7-99a7-2b494294410e.json  new-flow-example.json
backend/runners/: __init__.py  asterisk_runner.py  bot_runner.py
(+30 files in other folders)
